# QAI-Hub-XR-TTS-VLM-benchmark

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
assets/: texts.json
configs/: default.yaml  tts_piper.yaml  vlm_smolvlm_256m.yaml
scripts/: bootstrap.sh  configure_aihub.sh  run_all_benchmarks.sh  run_tts_benchmark.sh  run_vlm_benchmark.sh
src/xrbench/: __init__.py  __main__.py  cli.py  config.py  devices.py  doctor.py  errors.py  logging_utils.py  manifest.py  metrics.py  paths.py  reports.py  validation.py  workflows.py
src/xrbench/hub/: __init__.py  artifacts.py  client.py  jobs.py  profile_parser.py
src/xrbench/tts/: __init__.py  local_reference.py  piper_adapter.py  prepare.py  profile.py  report.py
src/xrbench/vlm/: __init__.py  architecture_inspector.py  cache_adapter.py  export.py  local_reference.py  prepare.py  profile.py  report.py  smolvlm_adapter.py  wrappers.py
tests/: test_architecture_inspector.py  test_config.py  test_devices.py  test_hub_client.py  test_logging_utils.py  test_manifest.py  test_metrics.py  test_profile_parser.py  test_reports.py  test_vlm_wrappers.py
